--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ dist: xenial   # required for Python >= 3.7
 language: python
 python:
   - "3.7"
+install:
+  - pipenv install -d
 script: 
-  - pytest
+  - pipenv run pytest -v
