--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ xlsxwriter = {version = "^1.1",optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
+pytest-black = "^0.3.7"
+pytest-cov = "^2.7"
+pytest-mypy = "^0.3.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
