Support poetry build
This allows for building and publishing via poerty. Authors is a
required field, and a module with a different name to the main class
needs a python file with the same name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "pysnyk"
 version = "0.1.0"
 description = "A Python client for the Snyk API"
+authors = []
 license = "MIT"
 
 [tool.poetry.dependencies]
