--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-black = "^0.3.7"
 pytest-cov = "^2.7"
 pytest-mypy = "^0.3.2"
 requests-mock = "^1.6"
+xlsxwriter = "^1.1.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
