--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest-cov = "^2.7"
 pytest-mypy = "^0.3.2"
 requests-mock = "^1.6"
 xlsxwriter = "^1.1.8"
+pytest-isort = "^0.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
