--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,10 @@ pytest-isort = "^0.3.1"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
+line_length = 88
