Add additional metadata
The readme will populate the description on PyPi, and the repository
provides a backlink to the source from the package. Poetry automatically
deals with updating when we make a new release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 packages = [
   { include = "snyk" },
 ]
+readme = "README.md"
+repository = "https://github.com/snyk-labs/pysnyk"
 
 [tool.poetry.dependencies]
 python = "^3.7"
