Set a client specific user agent string, and allow consumers to override
This makes it easier for us to distinguist clients in use on the server.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/snyk-labs/pysnyk"
 python = "^3.7"
 requests = "^2.22"
 mashumaro = "^1.7"
+poetry-version = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
