--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pysnyk"
-version = "0.3.0"
+version = "0.3.1"
 description = "A Python client for the Snyk API"
 authors = [
   "Gareth Rushgrove <garethr@snyk.io>",
@@ -17,6 +17,7 @@ python = "^3.7"
 requests = "^2.22"
 mashumaro = "^1.7"
 poetry-version = "^0.1.3"
+"delegator.py" = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
@@ -26,10 +27,7 @@ pytest-mypy = "^0.4.0"
 requests-mock = "^1.7"
 xlsxwriter = "^1.1.8"
 pytest-isort = "^0.3.1"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+pytest-mock = "^1.13.0"
 
 [tool.isort]
 multi_line_output = 3
@@ -37,3 +35,7 @@ include_trailing_comma = true
 force_grid_wrap = 0
 combine_as_imports = true
 line_length = 88
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
