--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,13 @@ importlib_metadata = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
-pytest-black = "^0.3.7"
+pytest-black = "^0.3.10"
 pytest-cov = "^2.7"
 pytest-mypy = "^0.4.0"
 requests-mock = "^1.7"
 xlsxwriter = "^1.1.8"
 pytest-isort = "^0.3.1"
+black = "^19.10b0"
 
 [tool.isort]
 multi_line_output = 3
