--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ addopts = --black --mypy --isort --verbose --ignore examples --cov=snyk --cov-re
 markers =
 # work around for https://github.com/dbader/pytest-mypy/pull/26 until the next release
     mypy: mark tests to be checked by mypy.
+filterwarnings =
+    ignore::DeprecationWarning
