--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pysnyk"
-version = "0.6.3"
+version = "0.7.0"
 description = "A Python client for the Snyk API"
 authors = [
   "Gareth Rushgrove <garethr@snyk.io>",
@@ -15,20 +15,20 @@ repository = "https://github.com/snyk-labs/pysnyk"
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.22"
-mashumaro = "^1.7"
-poetry-version = "^0.1.3"
-importlib_metadata = "^1.6.1"
+mashumaro = "^3"
+importlib_metadata = "^4.4"
 retry = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.0"
+pytest = "^6.2.5"
 pytest-black = "^0.3.10"
-pytest-cov = "^2.7"
-pytest-mypy = "^0.4.0"
+pytest-cov = "^3.0.0"
+pytest-mypy = "^0.9.1"
 requests-mock = "^1.7"
 xlsxwriter = "^1.1.8"
 pytest-isort = "^1.1.0"
 black = "^19.10b0"
+types-requests = "^2.27.10"
 
 [tool.isort]
 multi_line_output = 3
