--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^6.2.5"
 pytest-black = "^0.3.12"
 pytest-cov = "^3.0.0"
 pytest-mypy = "^0.9.1"
+mypy = "0.940"
 requests-mock = "^1.9.3"
 xlsxwriter = "^3.0.3"
 pytest-isort = "^3"
